syntax = "proto3";
package com.shark.game.service;

message CardSeatGameOperationRequest {
  string token = 1;
  int32 operation = 2;
}

message CardSeatGameOperationResponse {
  int32 status = 1;
  string message = 2;
}

service CardSeatGameOperationService {
  rpc sendCardSeatGameOperation(CardSeatGameOperationRequest) returns (CardSeatGameOperationResponse);
}

message CardSeatGameStatusRequest {
  string token = 1;
}

message CardSeatGameStatusResponse {
  int32 status = 1;
  string message = 2;
}

service CardSeatGameStatusService {
  rpc registerCardSeatGameStatus(CardSeatGameStatusRequest) returns (stream CardSeatGameStatusResponse);
}